--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,17 @@ jobs:
             python -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
+      - run: pwd; ls
+      - run:
+          name: Running Black on source code
+          command: |
+            . venv/bin/activate
+            black dresden
+      - run:
+          name: Running Flake8 on source code
+          command: |
+            . venv/bin/activate
+            flake8 dresden
       - save_cache:
           key: deps-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
