--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/dresden
     docker:
-      - image: circleci/python:3.6.4
+      - image: circleci/python:3.6
     steps:
       - checkout
       - restore_cache:
@@ -14,6 +14,9 @@ jobs:
             python -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
+      - run:
+          name: Installing graphviz
+          command: sudo apt-get install graphviz
       - run: pwd; ls
       - run:
           name: Running Black on source code
@@ -25,6 +28,11 @@ jobs:
           command: |
             . venv/bin/activate
             flake8 dresden
+      - run:
+          name: Running unit tests
+          command: |
+            . venv/bin/activate
+            pytest
       - save_cache:
           key: deps-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
