--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,6 @@ jobs:
       - run:
           name: Installing graphviz
           command: sudo apt-get install graphviz
-      - run: pwd; ls
       - run:
           name: Running Black on source code
           command: |
@@ -28,6 +27,11 @@ jobs:
           command: |
             . venv/bin/activate
             flake8 dresden
+      - run:
+          name: Running isort on source code
+          command: |
+            . venv/bin/activate
+            isort .
       - run:
           name: Running unit tests
           command: |
