--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2
 jobs:
-  build:
+  build_3.6:
     working_directory: ~/dresden
     docker:
       - image: circleci/python:3.6
-    steps:
+    steps: &steps
       - checkout
       - restore_cache:
           key: deps-{{ .Branch }}-{{ checksum "requirements.txt" }}
@@ -41,3 +41,15 @@ jobs:
           key: deps-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
             - venv
+
+  build_3.7:
+    docker:
+      - image: circleci/python:3.7
+    steps: *steps
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build_3.6
+      - build_3.7
