--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,9 +47,21 @@ jobs:
       - image: circleci/python:3.7
     steps: *steps
 
+  build_3.8:
+    docker:
+      - image: circleci/python:3.8
+    steps: *steps
+
+  build_3.9:
+    docker:
+      - image: circleci/python:3.9
+    steps: *steps
+
 workflows:
   version: 2
   build:
     jobs:
       - build_3.6
       - build_3.7
+      - build_3.8
+      - build_3.9
